# mzfont

./: LICENSE.md  README.rst  pyproject.toml
docs/: cli.rst  conf.py  index.rst  install.rst  requirements.txt  usage.rst
mzfont/: __init__.py  cli.py  make_font  make_font.py  meta.py  suppress.py  test_font  test_font.py
