[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'mzfont'
dynamic = [
  'authors', 'classifiers', 'description', 'keywords', 'license',
  'license-files', 'readme', 'version']

[project.scripts]
mzfont = 'mzfont:cli.main'

[tool.hatch.metadata.hooks.custom]
path = 'mzfont/meta.py'
